--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,3 +23,15 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+
+main {
+  width: 90%;
+  text-align: center;
+  background-color: #f4f1ec;
+  padding-left: 40px;
+}
