Fix the nav bar to the top of screen

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,9 +5,9 @@ nav {
   color: #FFFF;
   padding-left: 1.5em;
   padding-right: 1.5em;
-  /*position: fixed;
+  position: fixed;
   top: 0;
-  width: 100%;*/
+  width: 100%;
 }
 
 span {
