--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,12 +1,13 @@
-header {
+.main-header{
   width: 100%;
   height: 500px;
   padding-top: 120px;
-  /*display: flex;
-  align-items: center;
-  justify-content: center;*/
   text-align: center;
   background-color: #de9e31;
   background-image: url(http://www.transparenttextures.com/patterns/asfalt-light.png);
 }
 
+.main-header h2 {
+  font-family: sans-serif;
+  color: white;
+}
