--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,32 +1,33 @@
 nav {
-  height: 120px;
-  width: 100%;
-  background-color: #4056A1;
-  color: #FFFF;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
-  position: fixed;
-  top: 0;
-  width: 100%;
+  display: flex;
+  color: #ffffff;
+  font-family: "Bungee", "sans-serif";
+  background-color: #4056a1;
+  height: 120px; 
+  width : 100%;
+  text-align: left;
+  padding: 1.5em;
+  justify-content: space-between;
+  position : fixed;
+  top : 0;
+
 }
 
-span {
-  font-family: 'Bungee', cursive;
-  padding-top: 1.5em;
-  margin-top: 2em;
-  
+nav span {
+  font-family: "Bungee", cursive;
+  display: inline-block;
 }
 
 .write-tweet {
+  width: 50%;
+  float: right;
   display: flex;
   justify-content: flex-end;
   text-align: center;
-  font-family:  sans-serif;
-  /*padding-bottom: 1.5em;*/
+  font-family: sans-serif;
+  font-size : medium;
 }
 
-.fas {
+.write-tweet .fas {
   color: red;
 }
-
-
