--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -55,6 +55,7 @@
   color: black;
   display: flex;
   justify-content: flex-start;
+  text-align: left;
   padding-bottom: 10px;
   border-bottom: 2px solid black;
   word-break: break-word;
